# sztuczny-miodek

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  adapter.py  ai_linter.py  config.json  config.py  config.schema.md  corrector.py  corrector.schema.md  decision-log.schema.md  decision_log.py  dictionary.example.json  dictionary.project.json  dictionary.py  dictionary.schema.md  engines.py  engines.schema.md  languagetool.py  languagetool.schema.md  manieryzm-ai.md  metrics-exporter.schema.md  metrics.py  metrics.schema.md  pyproject.toml  resources.py  rules.json  rules.schema.md  runner.py  runner.schema.md  runpod-lifecycle.schema.md  runpod_lifecycle.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: miodek-gate.yml
commands/: build-dict.md  confluence-correct.md  confluence-pull.md  correct.md  gate.md  lint.md  lt.md
deploy/: README.md  languagetool-local.md
deploy/grafana/: miodek-dashboard.json  provider.yaml
deploy/prometheus/: miodek-scrape.snippet.yml
deploy/systemd/: miodek-exporter.container  miodek-exporter.service
docs/: ADAPTER-INTERFACE.md  THRESHOLD-CALIBRATION.md  confluence.md  dictionary.md  gates.md  observability.md  stage2.md  usage.md
hooks/: hooks.json  miodek_write_gate.py  miodek_write_gate.schema.md
src/miodek/: __init__.py  adapter.py  ai_linter.py  build_dict.py  ci_gate.py  cli.py  config.py  confluence.py  corrector.py  decision_log.py  engines.py  languagetool_check.py  metrics.py  metrics_exporter.py  publish_gate.py  resources.py  runner.py  runpod_lifecycle.py
tests/: GROUND_TRUTH.md  antithesis_eval.md  baseline_en_cover_letter.md  baseline_en_doc.md  baseline_pl_intro.md  baseline_pl_raport.md  control_pl_clean.md  run_tests.sh  sentence_eval.md  triad_eval.md
tools/: build_dict.py  check_batch.py  check_build_dict.py  check_ci_gate.py  check_cli.py  check_config.py  check_confluence.py  check_corrector.py  check_decision_log.py  check_dictionary.py  check_engines.py  check_id_consistency.py  check_languagetool.py  check_metrics.py  check_metrics_exporter.py  check_publish_gate.py  check_resources.py  check_routing.py  check_runner.py  check_runpod_ephemeral.py  check_runpod_lifecycle.py  check_write_gate.py  ci_gate.py  gen_doc_catalog.py  gen_rules_json.py  languagetool_check.py  measure_antithesis.py  measure_attribution.py  measure_health.py  measure_markdown.py  measure_reduction.py  measure_sentences.py  measure_structural.py  measure_triad.py  metrics_exporter.py  publish_gate.py  runpod_idle_watchdog.README.md  runpod_idle_watchdog.sh  runpod_pod_up.py
